--- a/app/testqueue.html
+++ b/app/testqueue.html
@@ -4,18 +4,42 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="testqueue.css" rel="stylesheet">
     <title>Spoons Test Queue</title>
 </head>
 <body>
-    <div class="topNav">
-        <!-- link correction, etc -->
-        <a class="active" href="#home">Home</a>
-        <a href=#SpoonFeed>Spoon Feed</a>
-        <a href=#DataDash>Data Dashboard</a>
-        <a href=#Tasks>My Tasks</a>
-        <a href=#MyAssets>My Assets</a>
-        <a href=#MyDocs>My Docs</a>
-        <a href=#Help>Help</a>
+    <nav class="navbar navbar-dark bg-dark">
+        <div class="topNav container">
+            <!-- link correction, etc -->
+            <li class="nav-item">
+                <a class="nav-link" href="#home">Home</a>
+            </li>
+            <li>
+                <a class="nav-link" href=#SpoonFeed>Spoon Feed</a>
+            </li>
+            <li>
+                <a class="nav-link" href=#DataDash>Data Dashboard</a>
+            </li>
+            <li>
+                <a class="nav-link" href=#MyTasks>My Tasks</a>
+            </li>
+            <li>
+                <a class="nav-link" href=#MyAssets>My Assets</a>
+            </li>
+            <li>
+                <a class="nav-link" href=#MyDocs>My Docs</a>
+            </li>
+            <li>
+                <a class="nav-link" href=#Help>Help</a>
+            </li>
+        </div>
+    </nav>
+    <div class="queueWindow container">
+        <!-- overflow property w scrollbars -->
+        <h1>Task Queue Window</h1>
+        <!-- queue navigation bar -->
+        <!-- queue population -->
     </div>
 </body>
 </html>
