queue nav sort and filter structure

--- a/app/testqueue.html
+++ b/app/testqueue.html
@@ -38,7 +38,13 @@
     <div class="queueWindow container">
         <!-- overflow property w scrollbars -->
         <h1>Task Queue Window</h1>
-        <!-- queue navigation bar -->
+        <nav class="navbar">
+            <!-- queue navigation bar -->
+            <div class="queueNav container">
+                <!-- sort by; filters -->
+            </div>
+        </nav>
+        
         <!-- queue population -->
     </div>
 </body>
