--- a/app/testlogin.html
+++ b/app/testlogin.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href="testlogin.css" rel="stylesheet">
+    <!-- testing this below right here -->
+    <link href="node_modules/text-security/text-security.css" rel="stylesheet" type="text/css">
     <title>Spoons Test Login</title>
 </head>
 <body>
@@ -20,38 +22,42 @@
                         <img src="https://i5.walmartimages.com/asr/b22ec61d-72dc-4269-ae03-ae8634842c17_1.517d631b7471f6544825c410d439fa8a.jpeg?odnHeight=612&odnWidth=612&odnBg=FFFFFF" class="img-fluid"
                         alt="Sample image">
                     </div>
-                    <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
-                        <form>
-                            <!-- Email input -->
-                            <div class="form-outline mb-4">
-                                <input type="email" id="form3Example3" class="form-control form-control-lg"
-                                    placeholder="Enter a valid email address" />
-                                <label class="form-label" for="form3Example3">Email address</label>
-                            </div>
-                            <!-- Password input -->
-                            <div class="form-outline mb-3">
-                                <input type="password" id="form3Example4" class="form-control form-control-lg"
-                                    placeholder="Enter password" />
-                                <label class="form-label" for="form3Example4">Password</label>
-                            </div>
-                            <div class="d-flex justify-content-between align-items-center">
-                            <!-- Checkbox -->
-                                <div class="form-check mb-0">
-                                    <input class="form-check-input me-2" type="checkbox" value="" id="form2Example3" />
-                                    <label class="form-check-label" for="form2Example3">
-                                        Remember me
-                                    </label>
+                    <!-- <div class="sectionChunky"> -->
+                        <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1 sectionChunky">
+                            <form>
+                                <!-- Email input -->
+                                <div class="form-outline mb-4">
+                                    <input type="email" id="form3Example3" class="form-control form-control-lg"
+                                        placeholder="Enter a valid email address" />
+                                    <!-- <label class="form-label" for="form3Example3">Email address</label> -->
                                 </div>
-                                    <a href="#!" class="text-body">Forgot password?</a>
-                            </div>
-                            <div class="text-center text-lg-start mt-4 pt-2">
-                            <button type="button" class="btn btn-primary btn-lg"
-                                style="padding-left: 2.5rem; padding-right: 2.5rem;">Login</button>
-                            <p class="small fw-bold mt-2 pt-1 mb-0">Don't have an account? <a href="#!"
-                                class="link-danger">Register</a></p>
-                            </div>
-                        </form>
-                    </div>
+                                <!-- Password input -->
+                                <div class="form-outline mb-3">
+                                    <input type="password" id="form3Example4" class="form-control form-control-lg"
+                                        placeholder="Enter password" />
+                                    <!-- <label class="form-label" for="form3Example4">Password</label> -->
+                                </div>
+                                <div class="d-flex justify-content-between align-items-center">
+                                <!-- Checkbox -->
+                                    <div class="form-check mb-0">
+                                        <input class="form-check-input me-2" type="checkbox" value="" id="form2Example3" />
+                                        <label class="form-check-label" for="form2Example3">
+                                            Remember me
+                                        </label>
+                                    </div>
+                                        <a href="#!" class="text-body">Forgot password?</a>
+                                </div>
+                                <div class="text-center text-lg-start mt-4 pt-2">
+                                    <button type="button" class="btn btn-primary btn-lg"
+                                        style="padding-left: 2.5rem; padding-right: 2.5rem;">Login</button>
+                                    <button type="button" class="btn btn-primary btn-lg"
+                                        style="padding-left: 2.5rem; padding-right: 2.5rem;">Register</button>
+                                    <!-- <p class="small fw-bold mt-2 pt-1 mb-0">Ready to Spoon? <a href="#!"
+                                        class="link"> Register</a></p> -->
+                                </div>
+                            </form>
+                        </div>
+                    <!-- </div> -->
                 </div>
             <!--
                 <div class="d-flex flex-column flex-md-row text-center text-md-start
